--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,14 @@ html{
 	top:0;
 	left:55%;
 }
+#info{
+	position:fixed;
+	left:60%;
+	top:90%;
+	color:white;
+	font-size:0.8rem;
+}
+#info a{
+	text-decoration:none;
+	color:white;
+}
